--- a/index.html
+++ b/index.html
@@ -2,143 +2,281 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Korvi Clothing</title>
   <style>
     body {
-      margin: 0;
       background-color: black;
       color: white;
       font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
     }
+
     header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 20px;
-      background-color: #111;
-    }
-    .logo {
-      font-size: 2rem;
+      text-align: center;
+      padding: 2rem;
+      font-size: 2.5rem;
       font-weight: bold;
-      letter-spacing: 2px;
+      border-bottom: 1px solid white;
     }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      padding: 1rem;
+    }
+
     nav a {
-      margin-left: 20px;
       color: white;
       text-decoration: none;
       font-weight: bold;
+      border-bottom: 2px solid transparent;
     }
-    .hero {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 60px 20px 20px;
+
+    nav a:hover {
+      border-bottom: 2px solid white;
     }
-    .hero h1 {
-      font-size: 3rem;
+
+    .section-title {
       text-align: center;
+      font-size: 2rem;
+      margin: 2rem 0 1rem 0;
+      text-transform: uppercase;
     }
-    .products {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 20px;
+
+    .shirts-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
+      padding: 2rem;
     }
-    .products h2 {
-      margin-bottom: 20px;
-    }
+
     .shirt {
-      background: #222;
-      padding: 20px;
-      border-radius: 10px;
-      margin-bottom: 30px;
       text-align: center;
-      max-width: 300px;
-      width: 100%;
+      background-color: #111;
+      padding: 1rem;
+      border-radius: 10px;
     }
+
     .shirt img {
       width: 100%;
-      border-radius: 10px;
+      max-width: 250px;
+      border-radius: 8px;
     }
-    .shirt h3 {
-      margin: 10px 0 5px;
-    }
-    .shirt p {
-      margin: 5px 0 10px;
-    }
-    .button-container {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-    .btn {
-      padding: 10px;
-      border: 1px solid white;
-      background: black;
-      color: white;
-      cursor: pointer;
+
+    .shirt-name {
+      margin: 1rem 0 0.5rem 0;
+      font-size: 1.1rem;
       font-weight: bold;
     }
+
+    .price {
+      margin-bottom: 0.5rem;
+    }
+
+    .btn {
+      display: block;
+      width: 100%;
+      margin: 0.3rem auto;
+      padding: 0.5rem;
+      background-color: black;
+      color: white;
+      border: 1px solid white;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
     .btn:hover {
-      background: white;
+      background-color: white;
       color: black;
     }
-    @media (min-width: 768px) {
-      .products {
-        flex-direction: row;
-        justify-content: center;
-        flex-wrap: wrap;
-        gap: 20px;
+
+    .cart-icon {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: white;
+      border-radius: 50%;
+      padding: 12px;
+      width: 50px;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      z-index: 100;
+    }
+
+    .cart-icon img {
+      width: 24px;
+      height: 24px;
+    }
+
+    #cart-popup {
+      position: fixed;
+      bottom: 80px;
+      right: 20px;
+      width: 300px;
+      max-height: 400px;
+      overflow-y: auto;
+      background: #222;
+      color: white;
+      border: 1px solid white;
+      border-radius: 8px;
+      padding: 1rem;
+      display: none;
+      z-index: 101;
+    }
+
+    .cart-item {
+      border-bottom: 1px solid #444;
+      padding: 0.5rem 0;
+    }
+
+    .cart-item:last-child {
+      border-bottom: none;
+    }
+
+    #purchaseAll {
+      margin-top: 1rem;
+      width: 100%;
+      background: white;
+      color: black;
+      font-weight: bold;
+      border: none;
+      padding: 0.6rem;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    #purchaseAll:hover {
+      background: black;
+      color: white;
+      border: 1px solid white;
+    }
+
+    @media screen and (max-width: 500px) {
+      nav {
+        flex-direction: column;
+        align-items: center;
       }
     }
   </style>
 </head>
 <body>
+
   <header>
-    <div class="logo">KORVI</div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="tops.html">Tops</a>
-      <a href="#" style="color: #25D366;" onclick="alert('For contact, use WhatsApp: 0333 4291050')">Contact</a>
-    </nav>
+    KORVI CLOTHING
   </header>
 
-  <div class="hero">
-    <h1>Featured T-Shirts</h1>
-  </div>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="tops.html">Tops</a>
+  </nav>
 
-  <div class="products">
+  <div class="section-title">Featured T-Shirts</div>
+
+  <div class="shirts-container">
     <div class="shirt">
       <img src="drake.jpg" alt="Drake Shirt">
-      <h3>Drake</h3>
-      <p>Price: Rs. 2999</p>
-      <div class="button-container">
-        <button class="btn">Buy Now</button>
-        <button class="btn">Add to Cart</button>
-      </div>
+      <div class="shirt-name">Drake</div>
+      <div class="price">Rs. 2999</div>
+      <button class="btn" onclick="addToCart('Drake', 2999)">Add to Cart</button>
+      <button class="btn" onclick="buyNow('Drake', 2999)">Buy Now</button>
     </div>
 
     <div class="shirt">
       <img src="weeknd.jpg" alt="Weeknd Shirt">
-      <h3>Weeknd</h3>
-      <p>Price: Rs. 2999</p>
-      <div class="button-container">
-        <button class="btn">Buy Now</button>
-        <button class="btn">Add to Cart</button>
-      </div>
+      <div class="shirt-name">Weeknd</div>
+      <div class="price">Rs. 2999</div>
+      <button class="btn" onclick="addToCart('Weeknd', 2999)">Add to Cart</button>
+      <button class="btn" onclick="buyNow('Weeknd', 2999)">Buy Now</button>
     </div>
 
     <div class="shirt">
       <img src="wrecked.jpg" alt="Wrecked Shirt">
-      <h3>Wrecked</h3>
-      <p>Price: Rs. 2999</p>
-      <div class="button-container">
-        <button class="btn">Buy Now</button>
-        <button class="btn">Add to Cart</button>
-      </div>
+      <div class="shirt-name">Wrecked</div>
+      <div class="price">Rs. 2999</div>
+      <button class="btn" onclick="addToCart('Wrecked', 2999)">Add to Cart</button>
+      <button class="btn" onclick="buyNow('Wrecked', 2999)">Buy Now</button>
     </div>
   </div>
+
+  <!-- Cart Icon -->
+  <div class="cart-icon" onclick="toggleCart()">
+    <img src="https://cdn-icons-png.flaticon.com/512/34/34568.png" alt="Cart" />
+  </div>
+
+  <!-- Cart Popup -->
+  <div id="cart-popup">
+    <h3>Cart</h3>
+    <div id="cart-items"></div>
+    <button id="purchaseAll" onclick="checkout()">Purchase All</button>
+  </div>
+
+  <script>
+    const cart = JSON.parse(localStorage.getItem('korviCart')) || [];
+
+    function addToCart(name, price) {
+      cart.push({ name, price });
+      localStorage.setItem('korviCart', JSON.stringify(cart));
+      alert(name + " added to cart!");
+      renderCart();
+    }
+
+    function buyNow(name, price) {
+      localStorage.setItem('korviCart', JSON.stringify([{ name, price }]));
+      renderCart();
+      checkout();
+    }
+
+    function toggleCart() {
+      const popup = document.getElementById("cart-popup");
+      popup.style.display = popup.style.display === "block" ? "none" : "block";
+      renderCart();
+    }
+
+    function renderCart() {
+      const container = document.getElementById("cart-items");
+      container.innerHTML = "";
+      const stored = JSON.parse(localStorage.getItem('korviCart')) || [];
+      stored.forEach(item => {
+        const div = document.createElement('div');
+        div.className = 'cart-item';
+        div.innerText = `${item.name} - Rs. ${item.price}`;
+        container.appendChild(div);
+      });
+    }
+
+    function checkout() {
+      const name = prompt("Enter your full name:");
+      const contact = prompt("Enter your contact number:");
+      const email = prompt("Enter your email:");
+      const address = prompt("Enter your address:");
+      const stored = JSON.parse(localStorage.getItem('korviCart')) || [];
+
+      const details = stored.map(i => `${i.name} - Rs. ${i.price}`).join('\n');
+      const fullMessage = `
+New Order from KORVI Website:
+
+Items:
+${details}
+
+Customer Info:
+Name: ${name}
+Contact: ${contact}
+Email: ${email}
+Address: ${address}
+`;
+
+      window.location.href = `mailto:korviclothing@gmail.com?subject=New Order&body=${encodeURIComponent(fullMessage)}`;
+      localStorage.removeItem('korviCart');
+      document.getElementById("cart-popup").style.display = "none";
+    }
+
+    renderCart();
+  </script>
 </body>
 </html>
